use multiplicity map to find the correct constructor